# CopySpeak

./: .env.example  .gitignore  .prettierignore  .prettierrc  .vercelignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  COPYSPEAK_PI_VOICE.md  LICENSE  README.md  agents  docs_internal  file-structure.txt  install-kittentts.ps1  kitten_server.py  kittentts-cli.py  kokoro_server.py  package.json  pocket_server.py  setup-piper-cpu.ps1  svelte.config.js  tsconfig.json  vercel.json  vite.config.js  vitest-plugin-mock-state.ts  vitest.config.ts
.claude/: settings.example.json  settings.json
.github/workflows/: build-windows.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
agent-harness/: COPYSPEAK.md  setup.py
docs/: CONTRIBUTING.md  COPYSPEAK_PI_VOICE.md  COPYSPEAK_PI_VOICE_2.md  engines.md  profile-engine-settings.md
docs_internal/: CARTESIA_TTS_PLAN.md  README.md  README_BAD.md  architecture.md  brutalist_design.md  build_workflow.md  code-patterns-reference.md  development_guide.md  engines-profiles-unification.md  event-system.md  hud-overlay.md  implemented_features.md  kittentts-cli.py  major-rename.md  project-overview.md  requirements.md  roadmap.md  security_hardening_plan.md  tts_backends.md
scripts/: capture-screenshot.mjs  claude-copyspeak-hook.mjs  claude-copyspeak-status.mjs  copyspeak.mjs  fix-ports.ps1  generate-i18n-types.js  install-chatterbox.ps1  install-edge-tts.ps1  install-kittentts.ps1  install-kokoro.ps1  install-piper.ps1  install-pocket.ps1  install-uv.ps1  screenshot-window.ps1  tauri-dev.mjs  test-engine.ps1  version-bumper.mjs
src/: app.html  test-setup.ts
src-tauri/: Cargo.toml  kokoro_server.py  pocket_server.py  tauri.conf.json
src-tauri/capabilities/: default.json  hud.json
src-tauri/icons/: icon.icns
src-tauri/src/: autostart.rs  cli.rs  clipboard.rs  control_server.rs  fragment_queue.rs  history.rs  history_manager.rs  hud.rs  logging.rs  main.rs  pagination.rs  post_processing.rs  secrets.rs  telemetry.rs
src-tauri/src/audio/: format.rs  mod.rs  player.rs  stream.rs  wav.rs
src-tauri/src/commands/: config.rs  history.rs  install.rs  logging.rs  mod.rs  playback.rs  post_process.rs  queue.rs  update.rs
src-tauri/src/commands/tts/: credentials.rs  health.rs  helpers.rs  mod.rs  profiles.rs  selection.rs  synthesis.rs  voices.rs
src-tauri/src/config/: effects.rs  general.rs  hotkey.rs  hud.rs  mod.rs  output.rs  playback.rs  post_process.rs  post_processing.rs  sanitization.rs  tests.rs  trigger.rs  tts.rs
src-tauri/src/post_process/: mod.rs
src-tauri/src/sanitize/: cleanup.rs  markdown.rs  mod.rs  tts_normalize.rs
src-tauri/src/tts/: cartesia.rs  catalog.rs  cli.rs  edge.rs  elevenlabs.rs  google.rs  http.rs  local_tts_server.rs  microsoft.rs  mod.rs  openai.rs
src-web/: .gitignore  package.json  svelte.config.js  vercel.json  vite.config.js
(+301 files in other folders)
